testsuite/tests/saks/should_fail/saks_fail007.stderr

saks_fail007.hs:7:12: error: [GHC-58481]
    Parse error on input ‘::’. Expected one of '='
